--- a/semester_1/rgr3_set_list_stl/part1/Makefile
+++ b/semester_1/rgr3_set_list_stl/part1/Makefile
@@ -1,3 +1,3 @@
 part1:
-	g++ -Wall -Wextra -fsanitize=address,undefined,leak main.cpp -o main.out
+	g++ -std=c++17 -Wall -Wextra -pedantic -fsanitize=address,undefined main.cpp -o main.out
 	./main.out
